[gd_scene load_steps=9 format=2]

[ext_resource path="res://SomethingPoliceCar.gd" type="Script" id=1]
[ext_resource path="res://art/chars/police_2.png" type="Texture" id=2]
[ext_resource path="res://art/chars/police_1.png" type="Texture" id=3]
[ext_resource path="res://sound/mixkit-police-siren-us-1643.mp3" type="AudioStream" id=4]
[ext_resource path="res://art/particles/part1.png" type="Texture" id=21]

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "attack",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "die",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49, 48 )

[node name="AnimatedSprite" type="Area2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 3 )
z_index = 3
amount = 10
texture = ExtResource( 21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BgColorRect" type="ColorRect" parent="."]
margin_left = -26.0
margin_top = -55.0
margin_right = 24.0
margin_bottom = -50.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -26.0
margin_top = -55.0
margin_right = 24.0
margin_bottom = -50.0
color = Color( 0.101961, 0, 1, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -23.636

[connection signal="area_entered" from="." to="." method="_on_AnimatedSprite_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_AnimatedSprite_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
